commit for Xavier, trying to getlanding image to work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="page-header header container-fluid">
-      <div class="overlay"></div>
+      <div gegsvs class="overlay"></div>
       <div class="description">
   <h1>Welcome to the Landing Page!</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
@@ -26,7 +26,7 @@
         <!------Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent sticky-top">
   <a class="navbar-brand align-left" href="#">
-  <img src="assets/images/hog and truffles logo.jpg" width="30" height="30" class="d-inline-block align-left" alt="">
+  <img src="assets/images/hog_and_truffles_logo.jpg" width="30" height="30" class="d-inline-block align-left" alt="">
    Hog and Truffles
   </a>
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
     </ul>
   </div>
 </nav>
-  <div class="backgroundfirst"></div>
+  <div gfgsfsfd class="backgroundfirst"></div>
 </header>
         
         
