missing quotation mark updated for gallery

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
       <div class="col-md-4">
         <a href="#" data-size="1600x1067">
-          <img alt="picture" src="assets/images/1.jpg" class=img-fluid">
+          <img alt="picture" src="assets/images/1.jpg" class="img-fluid">
         </a>
       </div>
 
