our promise, headings and description updated. not complete.

--- a/index.html
+++ b/index.html
@@ -152,26 +152,26 @@
             <!-- bootstrap card-->
                 <div class="card-group">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="/assets/images/locally sourced.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Locally sourced</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">We strive to purchase all ingredients, from local farmers. We are strong advocats for Welsh produce!</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card"> 
+    <img class="card-img-top" src="/assets/images/recycling.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Recycling</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">We make sure that all packing used, is recyclable. Where possible, we shall purchase from farmers who do not even use packaging!</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="/assets/images/quality.jpg" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Free range </h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Quality Guaranteed</h5>
+      <p class="card-text">The company is ran with passion. Quality comes first. We love feedback!</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
