--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!------Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
   <a class="navbar-brand align-left" href="#">
-  <img src="assets/images/hog_and_truffles_logo.jpg" width="200" height="200" class="d-inline-block align-left" alt="">
+  <img src="assets/images/hog_and_truffle_logo_no_background.png" width="200" height="200" class="d-inline-block align-left" alt="">
    
   </a>
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -425,3 +425,17 @@
 </body>
 
 </html>
+
+
+
+
+
+<div class="content_container header_text" style="min-height: 887px;">
+                    <h1>Hog And Truffles</h1>
+                    <h2>Creating bespoke, sustainably sourced and decadent canopes, meals and buffets.</h2>
+                    <div class="arrow">
+                        <div class="icon"><img src="/img/svg/flower-white.svg"></div>
+                        <div class="see_food">See Our Food</div>
+                        <img src="/img/svg/arrow-down.svg" class="scroll_to_content" data-id="our-food">
+                    </div>
+                </div>
