Navbar made smaller and turned to #FFBD33 (yellow)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!------Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
   <a class="navbar-brand align-right" href="#">
-  <img src="assets/images/hog_and_truffle_logo_no_background.png" width="100" height="200" class="d-inline-block align-left" alt="">
+  <img src="assets/images/hog_and_truffle_logo_no_background.png" width="100" height="100" class="d-inline-block align-right" alt="">
    
   </a>
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
