About us background changed to Welsh flag

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ Are you looking for someone to provide the food at your next event? Large or sma
             <div class="col-md-4">
                 
         
-<div class="contact-us col-md-4">
+<div class="col-md-4">
                 <div class="row">
                     <div class="col">
                         <h5 class="uppercase">Social</h5>
