Contact us, spaces got rid of

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Document</title>
 </head>
 <body>
-  <!------Navbar-->
+  <!------Navbar--> 
         <nav class="navbar navbar-expand-lg navbar-light  fixed-top text-align: center;">
   <a class="navbar-brand align-right" href="#">
   <img src="assets/images/hog_and_truffle_logo_no_background.png" width="100" height="100" class="d-inline-block align-right" alt="">
@@ -38,7 +38,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#About">About</a>
+        <a class="nav-link" href="#AboutMe">About Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#What we do">What We Do</a>
@@ -91,7 +91,7 @@
     
 <!--About us-->
         
-<section id="about">
+<section id="#aboutUs">
 <div class="second-image">  
   <div class="container-fluid">
             <div class="row justify-content-around">
@@ -352,11 +352,11 @@ Are you looking for someone to provide the food at your next event? Large or sma
         <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
                 <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Hogwarts, Bridgend</p>
+                    <p>Hogwarts,Bridgend</p>
                 </li>
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 01 234 567 89</p>
+                    <p>01608642433</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
