update github to meand missing sections

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Are you looking for someone to provide the food at your next event? Large or sma
 <!--Our Promise FINISH-->
 
 
-<!--Sample Dishs->
+<!--Sample Dishs gallery->
         
         
         <!--gallery https://mdbootstrap.com/plugins/jquery/gallery/ lightbox gallery with gutters-->
