--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="Landing-section">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#AboutMe">About Us</a>
+                    <a class="nav-link" href="#about-us">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#What we do">What We Do</a>
+                    <a class="nav-link" href="#">What We Do</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our Promise</a>
+                    <a class="nav-link" href="#Our-Promise">Our Promise</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sample Menu</a>
-                </li>
-
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Get Quote</a>
+                    <a class="nav-link" href="#sample-menus">Sample Menu</a>
                 </li>
 
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#get-quote">Get Quote</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact Us</a>
                 </li>
 
             </ul>
