Welsh flag background only showing on about as, not filling page though

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="backgroundfirst">
                 <div class="centered_overfirst_pic">
                     <div class="handtbig">
-                        <img src="assets/images/hog_and_truffle_logo_no_background_big.png">
+                        <img src="assets/images/hog_and_truffle_logo_no_background_big.png" >
                     </div>
 
 
@@ -92,28 +92,27 @@
     </div>
     <!-- opening image and logo Finish -->
 
-    <section id="about-us" class="fullpage">
-        <div class="row">
+    
 
 
             <!--About us-->
 
             <section id="about-us" class="fullpage">
-                <div class="row"> </div>
+                <div class="row"> 
 
-                <div class="container-fluid">
-                    <div class="row justify-content-around">
-                        <div class="col-auto">
+                    <div class="container-fluid">
+                        <div class="row justify-content-around">
+                            <div class="col-auto">
                             <h3 class="heading">About us</h3>
+                            </div>
                         </div>
-                    </div>
 
 
 
-                    <img src="assets/images/harrison_and_lucy.jpg" class="handl img-fluid rounded mx-auto d-block ">
+                    <img src="assets/images/harrison_and_lucy.jpg" width="200" height="auto"class="handl img-fluid rounded mx-auto d-block">
                 </div>
 
-                <p>Hog & Truffles are actually called Lucy & Harrison.
+                Hog & Truffles are actually called Lucy & Harrison.
                     <br> We are passionate cooks based in South Wales.
                     <br> We have been established as Hog & Truffles since 2017.
                     <br> Available for parties, events and private dining.
