contact us background made grey

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 
-            <Section id="Our-Promise">
+            <Section id="Our-Promise" class="fullpage">
                 <div class="container-fluid">
                     <div class="row justify-content-around">
                         <div class="col-auto">
