--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!--google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Hog and Truffles </title>
+    <link rel= "shortcut icon" type="image.png" href="assets/images/hog_and_truffle_logo_no_background_big.png"
 </head>
 
 <body>
@@ -385,7 +386,7 @@
 
 
             <!-- Socail Media links -->
-            <section id="Social-media">
+            <section id="Social-media" class="social-center">
                 <footer class=" container-fluid center section-site-footer">
                     <div class="social-link row ">
                         <div class="col-md-4">
@@ -394,7 +395,7 @@
 
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="uppercase">Social</h5>
+                                    <h5 class="uppercase">Follow Us</h5>
                                     <div class="footer-content">
                                         <ul class="list-inline social-links">
                                             <li class="list-inline-item">
@@ -414,12 +415,7 @@
                                         <i class="fab fa-instagram" aria-hidden="true"></i>
                                         <span class="sr-only">Instagram</span>
                                     </a>
-                                            </li>
-                                            <li class="list-inline-item">
-                                                <a href="address needed" target="_blank" aria-label="LinkedIn" rel="noopener">
-                                        <i class="fab fa-linkedin" aria-hidden="true"></i>
-                                        <span class="sr-only">LinkedIn</span>
-                                    </a>
+                                            
                                             </li>
                                             <li class="list-inline-item">
                                                 <a href="address needed" target="_blank" aria-label="Youtube" rel="noopener">
