Get a quote background color added. Also padding added to sections '.pad

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="backgroundfirst">
                 <div class="centered_overfirst_pic">
                     <div class="handtbig">
-                        <img src="assets/images/hog_and_truffle_logo_no_background_big.png" >
+                        <img src="assets/images/hog_and_truffle_logo_no_background_big.png" style="max-width:100%;height:auto;">
                     </div>
 
 
@@ -98,7 +98,7 @@
 
             <!--About us-->
 
-            <section id="about-us" class="fullpage">
+            <section id="about-us" class="fullpage pad">
                 <div class="row"> 
 
                     <div class="container-fluid">
@@ -122,10 +122,7 @@
 
             </section>
         </div>    
-            <br>
-            <br>
-            <br>
-            <br>
+            
 
             <!--About us FINISH-->
 
@@ -139,7 +136,7 @@
                 <div class="container-fluid">
                     <div class="row justify-content-around">
                         <div class="col-auto">
-                            <h3 class="heading">Our Promise</h3>
+                            <h3 class="heading pad">Our Promise</h3>
                         </div>
                     </div>
                     <!-- bootstrap card-->
@@ -256,7 +253,7 @@
 
             <!--mb-4Get a Quote https://mdbootstrap.com/docs/jquery/forms/contact/ make sure form requires certain information. <input id="email" name="email" type="email" placeholder="Your email" class="form-control" required> -->
             <!--Section: Contact v.2-->
-            <section id="get-quote" class="auto">
+            <section id="get-quote" class="auto pad">
 
                 <!--Section heading-->
                 <h2 class="h1-responsive font-weight-bold text-center my-4">Get A Quote</h2>
